@@ -2,6 +2,8 @@
 
 	* background-properties-capplet.c (setup_dialog): Don't hide
 	opacity controls
+	(dialog_button_clicked_cb): Apply settings after commiting the
+	change set
 
 	* background.schema: Added wallpaper-enabled
 
